--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
             }
         ],
         "import/prefer-default-export": 0,
-        "object-curly-spacing": ["error", "always", { "arraysInObjects": false }]
+        "object-curly-spacing": ["error", "always", { "arraysInObjects": false }],
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
     }
 }
