--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "Bitcoin market value analyzer",
   "main": "index.js",
   "dependencies": {
+    "@tsconfig/node16": "^1.0.2",
     "@types/bent": "^7.3.2",
+    "@types/config": "0.0.38",
+    "@types/node": "^16.11.9",
     "bent": "^7.3.12",
     "config": "^3.3.6",
     "fastify": "^3.24.0",
     "fastify-autoload": "^3.9.0",
     "fastify-swagger": "^4.12.6",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@tsconfig/node14": "^1.0.1",
-    "@types/config": "0.0.38",
-    "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.25.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "eslint-plugin-import": "^2.25.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
