--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "fastify": "^3.24.0",
     "fastify-autoload": "^3.9.0",
     "fastify-swagger": "^4.12.6",
-    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "winston": "^3.3.3"
@@ -24,7 +23,8 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.3",
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
